# peerpath

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.resources/plan/: implementation-plan.md
docs/examples/: host-missing-route.md
src/peerpath/: cli.py  fixtures.py  models.py  redaction.py  report.py
src/peerpath/parsers/: __init__.py  docker.py  firewall.py  routes.py  sysctl.py  wireguard.py
src/peerpath/rules/: __init__.py  reachability.py
tests/: test_cli_smoke.py  test_fixtures.py  test_parsers_docker.py  test_parsers_routes.py  test_parsers_sysctl_firewall.py  test_parsers_wireguard.py  test_redaction.py  test_report.py  test_rules_reachability.py
tests/fixtures/allowedips-mismatch/: expected.json  manifest.json
tests/fixtures/allowedips-mismatch/collectors/: docker-compose-ps.json  docker-inspect.json  wg-show-dump.txt  wg-showconf.conf
tests/fixtures/forwarding-disabled/: expected.json  manifest.json
tests/fixtures/forwarding-disabled/collectors/: ip-route.txt  wg-show-dump.txt
tests/fixtures/host-missing-route/: expected.json  manifest.json
tests/fixtures/host-missing-route/collectors/: firewall.txt  ip-route.txt  wg-showconf.conf
